--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -15,3 +15,9 @@
     @content;
   }
 }
+
+@mixin default {
+  @media only screen and (min-width: 992px) {
+    @content;
+  }
+}
