--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@
   padding: 0;
   font-family: "Montserrat-Regular";
   scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 html,
 body {
